--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 css/.sass-cache
-behat/behat.yml
+behat/*.yml
 behat/features/bootstrap/FeatureContext.php
 behat_features/1*.feature
 behat_features/private_*
