--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,25 @@
 {
-   "autoload": {
+    "name": "drupal/behat_editor_saucelabs",
+    "type": "drupal-module",
+    "description": "Runs behat tests on saucelabs.",
+    "homepage": "https://github.com/alnutile/behat_editor_saucelabs",
+    "license": "GPL-2.0",
+    "authors": [
+        {
+            "name": "Alfred Nutile",
+            "email": "alfrednutile@gmail.com",
+            "role": "The guy behind the keyboard"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/alnutile/behat_editor_saucelabs/issues"
+    },
+    "require": {
+        "behat/behat": "2.4.*@stable"
+    },
+    "autoload": {
         "psr-0": {
-          "Drupal\\BehatEditorSauceLabs": "src/"
+            "Drupal\\BehatEditorSauceLabs": "src/"
         }
     }
 }
