--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ behat/features/bootstrap/FeatureContext.php
 behat_features/1*.feature
 behat_features/private_*
 behat_features/results/*.html
-libraries
+#libraries
