--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
             "role": "The guy behind the keyboard"
         }
     ],
+    "require": {
+        
+    },
     "support": {
         "issues": "https://github.com/alnutile/behat_editor_saucelabs/issues"
     },
